update layout cbgv_item

--- a/app/src/main/res/layout/activity_welcom.xml
+++ b/app/src/main/res/layout/activity_welcom.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    android:background="#E3F2FD"
+    android:background="#FFFFFF"
     android:padding="24dp">
 
     <!-- Logo -->
