--- a/app/src/main/res/layout/activity_welcom.xml
+++ b/app/src/main/res/layout/activity_welcom.xml
@@ -31,7 +31,7 @@
 
     <!-- Nút Continue -->
     <Button
-        android:id="@+id/btnContinue"
+        android:id="@+id/btnLogin"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="Continue"
